gac_sb/objects/AppCIRamortissement__c.object
<CustomObject>
    <description>APPLICATION CIR - Comprend les dotations aux amortissements, et les dotations aux amortissements de brevet</description>
    <fields>
        <fullName>Annuite_amortissement__c</fullName>
        <label>Annuité d&apos;amortissement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_acquisition__c</fullName>
        <label>Date d&apos;acquisition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Département</label>
        <referenceTo>AppCIRdepartement__c</referenceTo>
        <relationshipName>Amortissements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forcer_recalcul_taux_RD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utile pour les triggers, ne pas utiliser/afficher ailleurs</description>
        <label>Forcer le recalcul taux R&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <label>Id d&apos;import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Methode_de_calcul__c</fullName>
        <description>Sert à définir la méthode de calcul du taux R&amp;D</description>
        <label>Méthode de calcul du taux R&amp;D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manuelle</fullName>
                    <default>true</default>
                    <label>Manuelle</label>
                </value>
                <value>
                    <fullName>Moyenne des sommes</fullName>
                </value>
                <value>
                    <fullName>Somme des moyennes</fullName>
                </value>
                <value>
                    <fullName>Moyenne des sommes du département</fullName>
                </value>
                <value>
                    <fullName>Somme des moyennes du département</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <label>Mission CIR</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipName>Amortissements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option1__c</fullName>
        <formula>Annuite_amortissement__c * Taux_RD_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option2__c</fullName>
        <formula>Annuite_amortissement__c * Taux_RD_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option3__c</fullName>
        <formula>Annuite_amortissement__c * Taux_RD_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_acquisition__c</fullName>
        <label>Montant d&apos;acquisition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Num_immobilisation__c</fullName>
        <label>N° d&apos;immobilisation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projet</label>
        <referenceTo>AppCIRprojet__c</referenceTo>
        <relationshipName>Amortissements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taux_RD_option1__c</fullName>
        <label>Taux R&amp;D option 1</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_RD_option2__c</fullName>
        <label>Taux R&amp;D option 2</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_RD_option3__c</fullName>
        <label>Taux R&amp;D option 3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>[OLD] Amortissement</label>
    <nameField>
        <label>Désignation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amortissements</pluralLabel>
    <recordTypes>
        <fullName>amortissement</fullName>
        <active>true</active>
        <label>Dotations aux amortissements</label>
    </recordTypes>
    <recordTypes>
        <fullName>amortissementBrevet</fullName>
        <active>true</active>
        <label>Dotations aux amortissements de brevets</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>